--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,5 +1,7 @@
-<% provide(:title, 'Contact')%>
+<% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-	Prueba de Pagina de Contacto
+  Contact Ruby on Rails Tutorial about the sample app at the
+  <a href="http://railstutorial.org/contact">contact page</a>.
 </p>
+
